# body-framework

./: .gitignore  .gitmodules  BODY_ClaudeCode_Brief.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
body/: CMakeLists.txt
body/core/: AudioBuffer.cpp  AudioBuffer.hpp  AudioProcessor.cpp  AudioProcessor.hpp  BusLayout.cpp  BusLayout.hpp  Identifiers.hpp  MidiBuffer.cpp  MidiBuffer.hpp  MidiMessage.cpp  MidiMessage.hpp  Parameter.cpp  Parameter.hpp  ParameterGroup.cpp  ParameterGroup.hpp  ProcessContext.hpp  StateSerializer.cpp  StateSerializer.hpp
body/dsp/: BiquadFilter.cpp  BiquadFilter.hpp  DelayLine.cpp  DelayLine.hpp  Envelope.cpp  Envelope.hpp  FFT.cpp  FFT.hpp  Oscillator.cpp  Oscillator.hpp  SIMD.hpp  SVFilter.cpp  SVFilter.hpp
body/formats/au/: AUEntry.mm  AUPlugin.hpp  AUPlugin.mm  BODYEditorViewController.h  BODYEditorViewController.mm
body/formats/clap/: ClapEntry.cpp  ClapEntry.hpp  ClapExtensions.cpp  ClapExtensions.hpp  ClapGuiExtension.mm  ClapPlugin.cpp  ClapPlugin.hpp
body/formats/vst3/: Vst3EditorView.hpp  Vst3EditorView.mm  Vst3Entry.cpp  Vst3Entry.hpp  Vst3Plugin.cpp  Vst3Plugin.hpp
body/gui/: Colour.hpp  Component.cpp  Component.hpp  Font.hpp  Graphics.hpp  KeyEvent.hpp  MouseEvent.hpp  ParameterAttachment.cpp  ParameterAttachment.hpp  PluginEditor.cpp  PluginEditor.hpp  Point.hpp  Rectangle.hpp
body/gui/components/: Button.cpp  Button.hpp  Knob.cpp  Knob.hpp  Label.cpp  Label.hpp  Slider.cpp  Slider.hpp  Toggle.cpp  Toggle.hpp
body/gui/platform/mac/: GraphicsMac.hpp  GraphicsMac.mm  PlatformViewMac.hpp  PlatformViewMac.mm
docs/: dsp-guide.md  getting-started.md  gui-guide.md
examples/GainPlugin/: CMakeLists.txt  GainEditor.cpp  GainEditor.hpp  GainPlugin.cpp  GainPlugin.hpp  GainPlugin_AU.mm  GainPlugin_CLAP.cpp  GainPlugin_VST3.cpp
examples/SynthPlugin/: CMakeLists.txt  SynthEditor.cpp  SynthEditor.hpp  SynthPlugin.cpp  SynthPlugin.hpp  SynthPlugin_AU.mm  SynthPlugin_CLAP.cpp  SynthPlugin_VST3.cpp
tests/: CMakeLists.txt  test_AudioBuffer.cpp  test_BiquadFilter.cpp  test_Component.cpp  test_DelayLine.cpp  test_Envelope.cpp  test_FFT.cpp  test_GuiPrimitives.cpp  test_Integration.cpp  test_MidiBuffer.cpp  test_Oscillator.cpp  test_Parameter.cpp  test_ParameterAttachment.cpp  test_ProcessContext.cpp  test_SIMD.cpp  test_SVFilter.cpp  test_StateSerializer.cpp
